--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 	<string name="app_name">traill</string>
 	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
+	<string name="title_activity_request_ride">RequestRideActivity</string>
+	<string name="title_activity_maps">MapsActivity</string>
 </resources>
