Made it so when you click on an unused navigation item it won't navigate to home fragment. Driver dashboard now shows all available ride requests. Cleaned up the architecture a little bit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 	<string name="hello_blank_fragment">Hello blank fragment</string>
 	<string name="title_activity_request_ride">RequestRideActivity</string>
 	<string name="title_activity_maps">MapsActivity</string>
+	<string name="GOOGLE_API_KEY">AIzaSyCdyN3bq3L8Tsko45Jn2uM5CTRdfR-CatM</string>
 </resources>
